Firefox scrollbar fix for GZip and Brolit builds

--- a/Brotli/TemplateData/style.css
+++ b/Brotli/TemplateData/style.css
@@ -1,4 +1,4 @@
-body { padding: 0; margin: 0 }
+html, body { padding: 0; margin: 0; overflow:hidden; }
 #unity-container { position: absolute; width: 100%; height: 100%; }
 #unity-canvas { width: 100%; height: 100%; background: #FFFFFF;}
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
